<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUsernameSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:hint="@string/username"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="8dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:textColorHint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtUsernameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorTextPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            android:hint="@string/password"
            app:helperTextEnabled="true"
            app:helperText="Choose a password with at least 8 characters"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:textColorHint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorTextPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPasswordConfirmSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            android:hint="@string/confirm_password"
            app:helperTextEnabled="true"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:textColorHint="@color/colorTextSecondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtPasswordConfirmSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorTextPrimary"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/chkAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_agree"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cornerRadius="30dp"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:width="150dp"
            android:textAllCaps="false"
            android:enabled="false"
            />

    </LinearLayout>

</FrameLayout>